fix menu navigation mobile et carte titre

--- a/assets/projets.css
+++ b/assets/projets.css
@@ -387,7 +387,7 @@ footer {
     }
 
     .card {
-        width: 300px;
+        width: 310px;
         height: 180px;
     }
 
